fix safari overflow

--- a/scss/Layout/_layout.scss
+++ b/scss/Layout/_layout.scss
@@ -89,15 +89,6 @@ section{
 }
 
 
-.content-scroll-x{
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
-    > div{
-        display: block;
-    }
-}
-
-
 @media screen and (max-width: 991px) {
 }
 
